Updates use of pow() in HTMLInputElement::stepMismatch() to match version upstreamed to webkit.org.

See https://bugs.webkit.org/show_bug.cgi?id=32675

Change-Id: Ife24867a1c96a3b46226d06862198a2e6dfeb216